# st_tui_editor

./: .gitignore  MANIFEST.in  README.md  example.py  pyproject.toml
.streamlit/: config.toml
st_tui_editor/: __init__.py  pyproject.toml
st_tui_editor/frontend/: package-lock.json  package.json
st_tui_editor/frontend/src/: MyComponent.tsx  index.tsx
