[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "st_tui_editor"
version = "0.0.3"
description = "Use Toast UI Editor ui.toast.com/tui-editor in your streamlit project."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Nishant", email = "nishkumar1@outlook.com" }]
dependencies = ["streamlit >= 1.51"]

[project.optional-dependencies]
devel = [
  "wheel",
  "pytest==7.4.0",
  "playwright==1.48.0",
  "requests==2.31.0",
  "pytest-playwright-snapshot==1.0",
  "pytest-rerunfailures==12.0",
]

[tool.setuptools.packages.find]
include = ["st_tui_editor*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
st_tui_editor = ["frontend/build/**/*", "pyproject.toml"]
